# nnetwork

./: .gitignore  CMakeLists.txt  README.md  nnetwork.h
.github/: copilot-instructions.md
src/: layer.cpp  layer.h  main.cpp  network.cpp  network.h  neuron.cpp  neuron.h  parser.cpp  parser.h
